detail product pages

--- a/src/pages/fjallraven.html
+++ b/src/pages/fjallraven.html
@@ -4,7 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Nele | Fjällräven</title>
+  <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon.ico/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon.ico/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon.ico/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/assets/favicon.ico/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/assets/favicon.ico/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/assets/favicon.ico/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/assets/favicon.ico/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/assets/favicon.ico/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon.ico/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/assets/favicon.ico/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon.ico/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon.ico/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon.ico/favicon-16x16.png">
+  <link rel="manifest" href="/assets/favicon.ico/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/assets/favicon.ico/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <script>
 
@@ -59,15 +76,37 @@
         </li>
         <li>
           <h2 class="shortinfo-title">Explore</h2>
-          <a class="shortinfo-link" href="https://projects.invisionapp.com/share/9E92SG4YS#/screens/199166518">Click me!</a>
+          <a class="shortinfo-link" href="https://projects.invisionapp.com/share/9E92SG4YS#/screens/199166518" target="blank">Click me!</a><span class="emoji">👨‍💻</span>
         </li>
       </ul>
     </section>
-    <section class='section-container'>
-      <header class='section-header'>
-        <hr class='line'/>
-        <h1 class='section-title'>Brief</h1>
-      </header>
+    <section class="work-detail-container">
+      <article class='section-container'>
+        <header class='section-header'>
+          <hr class='line'/>
+          <h1 class='section-title'>Brief</h1>
+        </header>
+        <p class="section-text">FjällRäven has noticed that they are still unknown to some of their target groups and so. Therefore, they want to set up a promotional action where a part of their gamma will be placed in the spotlight.<br/><br/>
+        Create a fresh product website featuring this range of fascinating features.
+        The user will be well informed and driven to buy the product. Speak properly target your audience. We had to choose between 2 themes 'Back to school' and 'City Explorer'.</p>
+      </article>
+      <articler class='section-container'>
+        <header class='section-header'>
+          <hr class='line'/>
+          <h1 class='section-title'>Concept</h1>
+        </header>
+        <p class="section-text">I chose for the 'City Explorer' collection which included 2 backpacks and a totebag. For this collection I focused on people who like to go on a city trip, both men as women. <br/><br/>After some research I found that these people wanted to know practical things about the bags, so I highlighted some features which are important for going on a citytrip. Like the safety of the tote bag, the flexibility, the weight...<br/><br/>
+        Besides the practical things of the bags, I wanted to implement a fun thing for the custumors of these bags. My idea was to create a platform where customers can upload a picture with there bag and add the place where they have been with their bag. Other people can see on a map where Fjällräven bags have been, plus I putted the numbers of how far Fjällräven has travelled with his customers.</p>
+        <div class="flex-next detail-design">
+          <img class="detail-img" src="../assets/img/fjallraven1.png" width="400px" height="844px" alt="fjallraven1" />
+          <div class="flex-column">
+            <img class="detail-img" src="../assets/img/fjallraven2.png" width="400px" height="356,4px" alt="fjallraven2" />
+            <img class="detail-img" src="../assets/img/fjallraven3.png" width="400px" height="232px" alt="fjallraven3" />
+            <img class="detail-img" src="../assets/img/fjallraven4.png" width="400px" height="222px" alt="fjallraven4" />
+          </div>
+          <img class="detail-img" src="../assets/img/fjallraven5.png" width="400px" height="844px" alt="fjallraven5" />
+        </div>
+      </article>
     </section>
   </main>
 
