--- a/src/pages/coglass.html
+++ b/src/pages/coglass.html
@@ -4,7 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Nele | Coglass</title>
+  <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon.ico/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon.ico/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon.ico/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/assets/favicon.ico/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/assets/favicon.ico/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/assets/favicon.ico/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/assets/favicon.ico/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/assets/favicon.ico/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon.ico/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/assets/favicon.ico/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon.ico/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon.ico/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon.ico/favicon-16x16.png">
+  <link rel="manifest" href="/assets/favicon.ico/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/assets/favicon.ico/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <script>
 
@@ -59,15 +76,31 @@
         </li>
         <li>
           <h2 class="shortinfo-title">Explore</h2>
-          <a class="shortinfo-link" href="https://vimeo.com/219191361">Click me!</a>
+          <a class="shortinfo-link" href="https://vimeo.com/219191361" target="blank">Click me!</a><span class="emoji">👨‍💻</span>
         </li>
       </ul>
     </section>
-    <section class='section-container'>
-      <header class='section-header'>
-        <hr class='line'/>
-        <h1 class='section-title'>Brief</h1>
-      </header>
+    <section class="work-detail-container">
+      <article class='section-container'>
+        <header class='section-header'>
+          <hr class='line'/>
+          <h1 class='section-title'>Brief</h1>
+        </header>
+        <p class="section-text">Find a brilliant creative idea on Kickstarter and try to convey their message to their thousands of backers. Create a 2D explainer video that visualizes their concept, philosophy and message.<br/><br/>
+
+        The video takes exactly 30 seconds and has a voice-over in English. The voice-over has to be accompanied by music that provides added value.
+        You provide a full explainer that can be added, without editing, to the kickstarter page of the project.</p>
+      </article>
+      <articler class='section-container'>
+        <header class='section-header'>
+          <hr class='line'/>
+          <h1 class='section-title'>Concept</h1>
+        </header>
+        <p class="section-text">In the beginning it was hard to find a project which was easy to make an animation video of, but after some time I found CoGlass. Making cocktails at home can be amazing and far less expensive than going out. However, most people waste time and money experimenting with wrong recipes found online. CoGlass aims to solve this issue by bringing cocktail recipes with all their ingredients directly to your door.<br/><br/>
+        I found it a very interisting project which I could explain in an explainer video. So I began with the illustrations of it, which was not that easy because of my little experience in illustrations. But in the end it all went well and I'm happy that I could make something where I can be proud of.
+        </p>
+        <iframe class="center-image" src="https://player.vimeo.com/video/219191361" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </article>
     </section>
   </main>
 
