--- a/src/pages/meditea.html
+++ b/src/pages/meditea.html
@@ -4,7 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Nele | Meditea</title>
+  <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon.ico/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon.ico/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon.ico/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/assets/favicon.ico/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/assets/favicon.ico/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/assets/favicon.ico/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/assets/favicon.ico/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/assets/favicon.ico/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon.ico/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/assets/favicon.ico/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon.ico/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon.ico/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon.ico/favicon-16x16.png">
+  <link rel="manifest" href="/assets/favicon.ico/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/assets/favicon.ico/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <script>
 
@@ -59,15 +76,39 @@
         </li>
         <li>
           <h2 class="shortinfo-title">Explore</h2>
-          <a class="shortinfo-link" href="https://vimeo.com/219191361">Click me!</a>
+          <a class="shortinfo-link" href="https://invis.io/4DBRNVE3H" target="blank">Click me!</a><span class="emoji">👨‍💻</span>
         </li>
       </ul>
     </section>
-    <section class='section-container'>
-      <header class='section-header'>
-        <hr class='line'/>
-        <h1 class='section-title'>Brief</h1>
-      </header>
+    <section class="work-detail-container">
+      <article class='section-container'>
+        <header class='section-header'>
+          <hr class='line'/>
+          <h1 class='section-title'>Brief</h1>
+        </header>
+        <p class="section-text"></p>
+      </article>
+      <articler class='section-container'>
+        <header class='section-header'>
+          <hr class='line'/>
+          <h1 class='section-title'>Concept</h1>
+        </header>
+        <p class="section-text"></p>
+        <div class="flex-next detail-design">
+          <div class="flex-column">
+            <img class="detail-img" src="../assets/img/meditea1.png" width="300px" height="532,6px" alt="meditea1" />
+            <img class="detail-img" src="../assets/img/meditea2.png" width="300px" height="230px" alt="meditea2" />
+          </div>
+          <div class="flex-column">
+            <img class="detail-img" src="../assets/img/meditea3.png" width="581px" height="435px" alt="meditea3" />
+            <iframe src="https://player.vimeo.com/video/236276027" width="580px" height="326,8px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>
+          <div class="flex-column">
+            <img class="detail-img" src="../assets/img/meditea4.png" width="300px" height="229,4px" alt="meditea4" />
+            <img class="detail-img" src="../assets/img/meditea5.png" width="300px" height="531,9px" alt="meditea5" />
+          </div>
+        </div>
+      </article>
     </section>
   </main>
 
