explain text work

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 
   <meta charset="UTF-8">
   <title>Nele De Bruycker</title>
+  <meta name="description" content="Portfolio Nele De Bruycker" />
+  <meta name="keywords" content="Portfolio, Nele De Bruycker, Nele, Deviner, Web design, development, UI, UX" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon.ico/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon.ico/apple-icon-60x60.png">
