--- a/src/pages/coglass.html
+++ b/src/pages/coglass.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Portfolio Nele De Bruycker" />
+  <meta name="keywords" content="Portfolio, Nele De Bruycker, Nele, Deviner, Web design, development, UI, UX" />
   <title>Nele | Coglass</title>
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon.ico/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon.ico/apple-icon-60x60.png">
@@ -96,13 +98,19 @@
           <hr class='line'/>
           <h1 class='section-title'>Concept</h1>
         </header>
-        <p class="section-text">In the beginning it was hard to find a project which was easy to make an animation video of, but after some time I found CoGlass. Making cocktails at home can be amazing and far less expensive than going out. However, most people waste time and money experimenting with wrong recipes found online. CoGlass aims to solve this issue by bringing cocktail recipes with all their ingredients directly to your door.<br/><br/>
+        <p class="section-text">At the beginning it was hard to find a project which was easy to make an animation video of, but after some time I found CoGlass. Making cocktails at home can be amazing and far less expensive than going out. However, most people waste time and money experimenting with wrong recipes found online. CoGlass aims to solve this issue by bringing cocktail recipes with all their ingredients directly to your door.<br/><br/>
         I found it a very interisting project which I could explain in an explainer video. So I began with the illustrations of it, which was not that easy because of my little experience in illustrations. But in the end it all went well and I'm happy that I could make something where I can be proud of.
         </p>
         <iframe class="center-image" src="https://player.vimeo.com/video/219191361" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </article>
     </section>
   </main>
+  <footer>
+    <ul class="footer">
+      <li>&larr;<a href="/pages/meditea.html" class="footer-link"> Previous</a></li>
+      <li><a href="/pages/paranormalia.html" class="footer-link">Next </a> &rarr;</li>
+    </ul>
+  </footer>
 
 </body>
 </html>
