--- a/src/pages/fjallraven.html
+++ b/src/pages/fjallraven.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Portfolio Nele De Bruycker" />
+  <meta name="keywords" content="Portfolio, Nele De Bruycker, Nele, Deviner, Web design, development, UI, UX" />
   <title>Nele | Fjällräven</title>
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon.ico/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon.ico/apple-icon-60x60.png">
@@ -109,6 +111,12 @@
       </article>
     </section>
   </main>
+  <footer>
+    <ul class="footer">
+      <li>&larr;<a href="/pages/paranormalia.html" class="footer-link"> Previous</a></li>
+      <li><a href="/pages/meditea.html" class="footer-link">Next </a> &rarr;</li>
+    </ul>
+  </footer>
 
 </body>
 </html>
