--- a/src/pages/meditea.html
+++ b/src/pages/meditea.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Nele | Meditea</title>
+  <meta name="description" content="Portfolio Nele De Bruycker" />
+  <meta name="keywords" content="Portfolio, Nele De Bruycker, Nele, Deviner, Web design, development, UI, UX" />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon.ico/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon.ico/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon.ico/apple-icon-72x72.png">
@@ -68,11 +70,11 @@
       <ul class="shortinfo">
         <li>
           <h2 class="shortinfo-title">Category</h2>
-          <p class="shortinfo-text">Motion graphic</p>
+          <p class="shortinfo-text">Mobile design, UI, UX</p>
         </li>
         <li>
           <h2 class="shortinfo-title">Deliverables</h2>
-          <p class="shortinfo-text">Explainer video</p>
+          <p class="shortinfo-text">App design, Appstore video, clickable mockup</p>
         </li>
         <li>
           <h2 class="shortinfo-title">Explore</h2>
@@ -86,14 +88,18 @@
           <hr class='line'/>
           <h1 class='section-title'>Brief</h1>
         </header>
-        <p class="section-text"></p>
+        <p class="section-text">Think of a mobile native app (both iPhone and iPad) that captures supernatural practices. Of course, the app should be functional and the user has to believe in it.<br/>
+        No Harry Potter and the app of wisdom, base yourself on existing and credible practises! However, the authenticity is not that important for this assignment.</p>
       </article>
       <articler class='section-container'>
         <header class='section-header'>
           <hr class='line'/>
           <h1 class='section-title'>Concept</h1>
         </header>
-        <p class="section-text"></p>
+        <p class="section-text">I knew from the beginning that I wanted to do something with plants. Soon I came with the idea from japanese tea ceremonies. The app has to be a medium that helps people with their needs. Depending on their biorythms, they get everyday a plant according to what they need that day. After they chose a plant, they can choose whether they want to use it in a tea or to grow the plant.
+        They get an intro where they get prepared for the ceremony. With the force of spells and the plant, they will get the powers they need to feel better. <br/><br/>
+        For the right look and feel from the app, I tried different styles and colors but the blue color with the white lines was my favourite from the beginning. I used some soft colors with soft drop shadows so the user gets in a calm mood. To highlight the Japanese theme, I translated a few words like the plants name and the menu items in Japanese. <br/>
+        I liked this assignment, you can check the <a href="https://invis.io/4DBRNVE3H" class="links-url">clickable mockup.</a></p>
         <div class="flex-next detail-design">
           <div class="flex-column">
             <img class="detail-img" src="../assets/img/meditea1.png" width="300px" height="532,6px" alt="meditea1" />
@@ -111,6 +117,11 @@
       </article>
     </section>
   </main>
-
+  <footer>
+    <ul class="footer">
+      <li>&larr;<a href="/pages/fjallraven.html" class="footer-link"> Previous</a></li>
+      <li><a href="/pages/coglass.html" class="footer-link">Next </a> &rarr;</li>
+    </ul>
+  </footer>
 </body>
 </html>
