--- a/src/pages/paranormalia.html
+++ b/src/pages/paranormalia.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Portfolio Nele De Bruycker" />
+  <meta name="keywords" content="Portfolio, Nele De Bruycker, Nele, Deviner, Web design, development, UI, UX" />
   <title>Nele | Paranormalia</title>
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon.ico/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon.ico/apple-icon-60x60.png">
@@ -68,25 +70,60 @@
       <ul class="shortinfo">
         <li>
           <h2 class="shortinfo-title">Category</h2>
-          <p class="shortinfo-text">Motion graphic</p>
+          <p class="shortinfo-text">Web design & development</p>
         </li>
         <li>
           <h2 class="shortinfo-title">Deliverables</h2>
-          <p class="shortinfo-text">Explainer video</p>
+          <p class="shortinfo-text">Website with a webshop</p>
         </li>
         <li>
           <h2 class="shortinfo-title">Explore</h2>
-          <a class="shortinfo-link" href="https://vimeo.com/219191361" target="blank">Click me!</a><span class="emoji">👨‍💻</span>
+          <a class="shortinfo-link" href="http://student.howest.be/nele.de.bruycker/20152016/MAII/TRK/index.php" target="blank">Click me!</a><span class="emoji">👨‍💻</span>
         </li>
       </ul>
     </section>
-    <section class='section-container'>
-      <header class='section-header'>
-        <hr class='line'/>
-        <h1 class='section-title'>Brief</h1>
-      </header>
+    <section class="work-detail-container">
+      <article class='section-container'>
+        <header class='section-header'>
+          <hr class='line'/>
+          <h1 class='section-title'>Brief</h1>
+        </header>
+        <p class="section-text">
+          Design and program a website for an alternative truck festival. The visitor of your site will be immersed in the atmosphere of your festival. The concept is explained in detail and the practical information gets a logical place. The trucks are represented visually as well as through a guided text.<br/><br/>
+          As an organizer of this festival, you want to ensure that visitors can purchase or reserve at least 2 items in advance, depending on your idea. To further promote the pre-sale, provide one commercially interesting and original promotion.
+          The booking process must be processed in your site, except for the actual payment. All data must be written and stored in a correct way.
+        </p>
+      </article>
+      <articler class='section-container'>
+        <header class='section-header'>
+          <hr class='line'/>
+          <h1 class='section-title'>Concept</h1>
+        </header>
+        <p class="section-text">To find a theme where I could find out some new things was not that easy, we had to think really creative. We had to combine some new techniques with old traditions. After some time, I decided to work further on the subject of paranormal rituals which was chosen by many students so my challenge was to distinguish myself from the others.<br/><br/>
+        As I said, we needed to think outside the box to invent new things which were crazy but at the same time credible for the target group. The next step was to search the paranormal activities where I would work with, like healing your soul or contact ghosts. Then, the most difficult part was to invent the new things. <br/><br/>
+        After a lot af brainstorming and mindmapping, Paranormalia was born. A truck festival where you can have your bad aura blowed away with special fans or where you can have your future predicted by your foot fungi. For the visual approach, I wanted to work with collages and old photos with a mix of paranormal colors like pink and purple.<br/><br/>
+        Another difficult phase of this project was the implementation of the webshop. We needed to make a database with PHP where we could save the customers information. You need to have a clear view of what you will put in the databases and how you connect them with eachother. <br/>
+        I'm very happy with this project, I received many positive comments on this one and it has been in the Devine Showreel of that year.
+        <div class="flex-next detail-design">
+          <div class="flex-column">
+            <img class="detail-img" src="../assets/img/paranormalia1.png" width="490px" height="350,7px" alt="paranormalia1" />
+            <img class="detail-img" src="../assets/img/paranormalia2.png" width="490px" height="302,5px" alt="paranormalia2" />
+          </div>
+          <img class="detail-img" src="../assets/img/paranormalia3.png" width="340px" height="675px" alt="paranormalia3" />
+          <div class="flex-column">
+            <img class="detail-img" src="../assets/img/paranormalia4.png" width="342px" height="192,6px" alt="paranormalia4" />
+            <img class="detail-img" src="../assets/img/paranormalia5.png" width="342px" height="460px" alt="paranormalia5" />
+          </div>
+        </div>
+      </article>
     </section>
   </main>
+  <footer>
+    <ul class="footer">
+      <li>&larr;<a href="/pages/coglass.html" class="footer-link"> Previous</a></li>
+      <li><a href="/pages/fjallraven.html" class="footer-link">Next </a> &rarr;</li>
+    </ul>
+  </footer>
 
 </body>
 </html>
