detail text work pages

--- a/src/index.html
+++ b/src/index.html
@@ -139,10 +139,11 @@
           </li>
           <li>
             <h2 class="links-title">Links</h2>
-            <p>
-              <a class="links-url" href="https://www.behance.net/neledebruyb3d8" target="blank">Behance</a><br/>
-              <a class="links-url" href="https://vimeo.com/neledebruycker" target="blank">Vimeo</a><br/>
-              <a class="links-url" href="https://www.pinterest.com/nele_debruycker/" target="blank">Pinterest</a>
+            <ul>
+              <li><a class="links-url" href="https://www.behance.net/neledebruyb3d8" target="blank">Behance</a></li>
+              <li><a class="links-url" href="https://vimeo.com/neledebruycker" target="blank">Vimeo</a><li/>
+              <li><a class="links-url" href="https://www.pinterest.com/nele_debruycker/" target="blank">Pinterest</a></li>
+              <li><a class="links-url" href="https://github.com/NeleDB" target="blank">Github</a></li>
             </p>
           </li>
         </ul>
