--- a/src/index.html
+++ b/src/index.html
@@ -56,9 +56,9 @@
         <a href="/#about"><li class="nav-list-title">About</li></a>
       </ul>
       <ul class="link-list">
-        <a><li class="link-list-item"><img class="link-img" src="assets/img/behance.svg" width="23px" height="15px" alt="behance"/></li></a>
-        <a><li class="link-list-item"><img class="link-img" src="assets/img/vimeo.svg" width="18px" height="15px" alt="vimeo"/></li></a>
-        <a><li class="link-list-item"><img class="link-img" src="assets/img/mail.svg" width="18px" height="14px" alt="mail"/></li></a>
+        <a href="https://www.behance.net/neledebruyb3d8" target="blank"><li class="link-list-item"><img class="link-img" src="assets/svg/behance.svg" width="23px" height="15px" alt="behance"/></li></a>
+        <a href="https://vimeo.com/neledebruycker" target="blank"><li class="link-list-item"><img class="link-img" src="assets/svg/vimeo.svg" width="18px" height="15px" alt="vimeo"/></li></a>
+        <a href="mailto:debruyckernele@gmail.com"><li class="link-list-item"><img class="link-img" src="assets/svg/mail.svg" width="18px" height="14px" alt="mail"/></li></a>
       </ul>
     </nav>
     <div class="intro">
@@ -107,7 +107,7 @@
           </div>
         </div>
         <div class="work-item">
-          <img class="work-img" src="assets/img/work-paranormalia.jpg" width="362px" height="973px" alt="paranormalia" title="paranormalia"/>
+          <img class="work-img paranormalia-work" src="assets/img/work-paranormalia.jpg" width="362px" height="977px" alt="paranormalia" title="paranormalia"/>
           <a href="pages/paranormalia.html" class="overlay">
             <h2 class="overlay-title">Paranormalia</h2>
             <p class="overlay-client">School project</p>
