--- a/src/pages/meditea.html
+++ b/src/pages/meditea.html
@@ -52,9 +52,9 @@
         <a href="/#about"><li class="nav-list-title white">About</li></a>
       </ul>
       <ul class="link-list">
-        <a><li class="link-list-item"><img class="link-img" src="../assets/img/behance-white.svg" width="23px" height="15px" alt="behance"/></li></a>
-        <a><li class="link-list-item"><img class="link-img" src="../assets/img/vimeo-white.svg" width="18px" height="15px" alt="vimeo"/></li></a>
-        <a><li class="link-list-item"><img class="link-img" src="../assets/img/email-white.svg" width="18px" height="14px" alt="mail"/></li></a>
+        <a href="https://www.behance.net/neledebruyb3d8" target="blank"><li class="link-list-item"><img class="link-img" src="../assets/svg/behance-white.svg" width="23px" height="15px" alt="behance"/></li></a>
+        <a href="https://vimeo.com/neledebruycker" target="blank"><li class="link-list-item"><img class="link-img" src="../assets/svg/vimeo-white.svg" width="18px" height="15px" alt="vimeo"/></li></a>
+        <a href="mailto:debruyckernele@gmail.com"><li class="link-list-item"><img class="link-img" src="../assets/svg/mail-white.svg" width="18px" height="14px" alt="mail"/></li></a>
       </ul>
     </nav>
     <div class="flex-next work-header">
@@ -62,7 +62,7 @@
         <h1 class="work-title">Meditea</h1>
         <p class="work-category">Mobile app design</p>
       </div>
-      <img class="work-img" src="../assets/img/meditea-header.png" width="754px" height="401px" alt="meditea"/>
+      <img class="work-header-img" src="../assets/img/meditea-header.png" width="754px" height="401px" alt="meditea"/>
     </div>
   </header>
   <main>
@@ -100,18 +100,18 @@
         They get an intro where they get prepared for the ceremony. With the force of spells and the plant, they will get the powers they need to feel better. <br/><br/>
         For the right look and feel from the app, I tried different styles and colors but the blue color with the white lines was my favourite from the beginning. I used some soft colors with soft drop shadows so the user gets in a calm mood. To highlight the Japanese theme, I translated a few words like the plants name and the menu items in Japanese. <br/>
         I liked this assignment, you can check the <a href="https://invis.io/4DBRNVE3H" class="links-url">clickable mockup.</a></p>
-        <div class="flex-next detail-design">
+        <div class="flex-next detail-design meditea-design">
           <div class="flex-column">
             <img class="detail-img" src="../assets/img/meditea1.png" width="300px" height="532,6px" alt="meditea1" />
             <img class="detail-img" src="../assets/img/meditea2.png" width="300px" height="230px" alt="meditea2" />
           </div>
           <div class="flex-column">
-            <img class="detail-img" src="../assets/img/meditea3.png" width="581px" height="435px" alt="meditea3" />
-            <iframe src="https://player.vimeo.com/video/236276027" width="580px" height="326,8px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>
-          <div class="flex-column">
             <img class="detail-img" src="../assets/img/meditea4.png" width="300px" height="229,4px" alt="meditea4" />
             <img class="detail-img" src="../assets/img/meditea5.png" width="300px" height="531,9px" alt="meditea5" />
+          </div>
+          <div class="flex-column wide-section">
+            <img class="detail-img" src="../assets/img/meditea3.png" width="581px" height="435px" alt="meditea3" />
+            <iframe  class="detail-img design-video" src="https://player.vimeo.com/video/236276027" width="580px" height="326,8px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
         </div>
       </article>
