--- a/src/pages/paranormalia.html
+++ b/src/pages/paranormalia.html
@@ -52,9 +52,9 @@
         <a href="/#about"><li class="nav-list-title white">About</li></a>
       </ul>
       <ul class="link-list">
-        <a><li class="link-list-item"><img class="link-img" src="../assets/img/behance-white.svg" width="23px" height="15px" alt="behance"/></li></a>
-        <a><li class="link-list-item"><img class="link-img" src="../assets/img/vimeo-white.svg" width="18px" height="15px" alt="vimeo"/></li></a>
-        <a><li class="link-list-item"><img class="link-img" src="../assets/img/email-white.svg" width="18px" height="14px" alt="mail"/></li></a>
+        <a href="https://www.behance.net/neledebruyb3d8" target="blank"><li class="link-list-item"><img class="link-img" src="../assets/svg/behance-white.svg" width="23px" height="15px" alt="behance"/></li></a>
+        <a href="https://vimeo.com/neledebruycker" target="blank"><li class="link-list-item"><img class="link-img" src="../assets/svg/vimeo-white.svg" width="18px" height="15px" alt="vimeo"/></li></a>
+        <a href="mailto:debruyckernele@gmail.com"><li class="link-list-item"><img class="link-img" src="../assets/svg/mail-white.svg" width="18px" height="14px" alt="mail"/></li></a>
       </ul>
     </nav>
     <div class="flex-next work-header">
@@ -62,7 +62,7 @@
         <h1 class="work-title">Paranormalia</h1>
         <p class="work-category">Mobile app design</p>
       </div>
-      <img class="work-img" src="../assets/img/paranormalia-header.jpg" width="657px" height="433px" alt="paranormalia"/>
+      <img class="work-header-img" src="../assets/img/paranormalia-header.jpg" width="657px" height="433px" alt="paranormalia"/>
     </div>
   </header>
   <main>
