--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,15 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/assets/favicon.ico/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107571163-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-107571163-1');
+  </script>
 
   <script>
 
