--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,14 @@
     s.parentNode.insertBefore(wf, s);
     })(document);
   </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107571163-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-107571163-1');
+  </script>
 
 </head>
 
