--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/assets/favicon.ico/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 
   <script>
@@ -63,9 +63,12 @@
         <a href="/#about"><li class="nav-list-title">About</li></a>
       </ul>
       <ul class="link-list">
-        <a href="https://www.behance.net/neledebruyb3d8" target="blank"><li class="link-list-item"><img class="link-img" src="assets/svg/behance.svg" width="23px" height="15px" alt="behance"/></li></a>
-        <a href="https://vimeo.com/neledebruycker" target="blank"><li class="link-list-item"><img class="link-img" src="assets/svg/vimeo.svg" width="18px" height="15px" alt="vimeo"/></li></a>
-        <a href="mailto:debruyckernele@gmail.com"><li class="link-list-item"><img class="link-img" src="assets/svg/mail.svg" width="18px" height="14px" alt="mail"/></li></a>
+        <a href="https://www.behance.net/neledebruyb3d8" target="blank"><li class="link-list-item"><i class="fa fa-behance" aria-hidden="true"></i></li></a>
+        <a href="https://vimeo.com/neledebruycker" target="blank"><li class="link-list-item"><i class="fa fa-vimeo" aria-hidden="true"></i>
+
+        </li></a>
+        <a href="mailto:debruyckernele@gmail.com"><li class="link-list-item"><i class="fa fa-envelope" aria-hidden="true"></i>
+        </li></a>
       </ul>
     </nav>
     <div class="intro">
