--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
   <script>
     WebFontConfig = {
       custom: {
-        families: ['grandhotel'],
+        families: ['graphikRegular, graphikMedium, graphikSemibold, graphikBold'],
         // urls: ['/assets/fonts/din/din.css']
-        urls: ['assets/fonts/grandhotel/grandhotel.css']
+        urls: ['assets/fonts/graphik/graphik.css']
       }
     };
     (function(d) {
@@ -55,113 +55,83 @@
 
 <body>
 
-  <header>
-    <a href="/"><h1 class="header-title">nele.</h1></a>
-    <nav class="header-links index-header">
-      <ul class="nav-list">
-        <a href="/#work"><li class="nav-list-title">Work</li></a>
-        <a href="/#about"><li class="nav-list-title">About</li></a>
-      </ul>
-      <ul class="link-list">
-        <a href="https://www.behance.net/neledebruyb3d8" target="blank"><li class="link-list-item"><i class="fa fa-behance" aria-hidden="true"></i></li></a>
-        <a href="https://vimeo.com/neledebruycker" target="blank"><li class="link-list-item"><i class="fa fa-vimeo" aria-hidden="true"></i>
+  <header class="header">
+    <a href="/">
+      <h1 class="header__title">Nele De Bruycker.</h1>
+    </a>
 
-        </li></a>
-        <a href="mailto:debruyckernele@gmail.com"><li class="link-list-item"><i class="fa fa-envelope" aria-hidden="true"></i>
-        </li></a>
-      </ul>
+    <nav class="header__media">
+      <a href="https://www.behance.net/neledebruyb3d8" target="blank">
+        <i class="fa fa-behance" aria-hidden="true"></i>
+      </a>
+      <a href="https://vimeo.com/neledebruycker" target="blank">
+        <i class="fa fa-vimeo" aria-hidden="true"></i>
+      </a>
+      <a href="mailto:debruycker.nele@gmail.com">
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+      </a>
     </nav>
-    <div class="intro">
-      <h1 class="intro-title">hello</h1>
-      <p class="intro-text">I'm Nele, student web design and development </br>
-        who is currently searching for an internship. </br>
-        <a class="intro-link" href="#about">Want to know more?</a></p>
-    </div>
+
   </header>
-  <main class='main-container'>
-    <section class='section-container' id="work">
-      <header class='section-header'>
-        <hr class='line'/>
-        <h1 class='section-title'>Work</h1>
-      </header>
-      <div class="flex-next work-container">
+
+  <main>
+    <section class="intro">
+      <h1 class="intro__title">Hi, nice to meet you!</h1>
+      <p class="intro__text">I’m Nele De Bruycker, product designer and developer at <a href:"https://littlemissrobot.com/" target="blank" >Little Miss Robot.</a> <br />
+      Want to know more, <a href="/pages/about">read my full bio.</a> </p>
+    </section>
+    <section class="work">
+
+      <header class="section__title--invisible"><h1>Work</h1></header>
+      <article class="work__item">
+        <a href="pages/internship.html"></a>
+        <div class="work__item__image work__item__image--internship">
+          <img src="/assets/img/01_internship-overview.png" alt="Logo Little Miss Robot">
+        </div>
         <div>
-          <div class="flex-next">
-            <div class="work-item">
-              <img class="work-img" src="assets/img/work-fjallraven.jpg" width="360px" height="530px" alt="fjallraven" title="fjallraven"/>
-              <a href="pages/fjallraven.html" class="overlay">
-                <h2 class="overlay-title">Fjällräven</h2>
-                <p class="overlay-client">School project</p>
-                <p class="overlay-explain">Product website design about 3 backpacks from Fjällräven.</p>
-                <p class="overlay-link">View case</p>
-              </a>
-            </div>
-            <div class="work-item">
-              <img class="work-img" src="assets/img/work-meditea.jpg" width="360px" height="530px" alt="meditea" title="meditea"/>
-              <a href="pages/meditea.html" class="overlay">
-                <h2 class="overlay-title">Meditea</h2>
-                <p class="overlay-client">School project</p>
-                <p class="overlay-explain">App design about plants, tea and meditation.</p>
-                <p class="overlay-link">View case</p>
-              </a>
-            </div>
-          </div>
-          <div class="work-item">
-            <img class="work-img" src="assets/img/work-coglass.jpg" width="753px" height="423px" alt="coglass" title="coglass"/>
-            <a href="pages/coglass.html" class="overlay">
-              <h2 class="overlay-title">CoGlass</h2>
-              <p class="overlay-client">School project</p>
-              <p class="overlay-explain">Motion explainer video about a kickstarter project.</p>
-              <p class="overlay-link">View case</p>
-            </a>
-          </div>
+          <h2 class="work__item__title">Internship at Little Miss Robot</h2>
+          <p class="work__item__text">My three months of internship in 40”.</p>
         </div>
-        <div class="work-item">
-          <img class="work-img paranormalia-work" src="assets/img/work-paranormalia.jpg" width="362px" height="977px" alt="paranormalia" title="paranormalia"/>
-          <a href="pages/paranormalia.html" class="overlay">
-            <h2 class="overlay-title">Paranormalia</h2>
-            <p class="overlay-client">School project</p>
-            <p class="overlay-explain">Website about an alternative <br/> truck festival.(design/development)</p>
-            <p class="overlay-link">View case</p>
-          </a>
-        </div>
-      </div>
-    </section>
-    <section class='section-container about-section' id="about">
-      <header class='section-header'>
-        <hr class='line' />
-        <h1 class='section-title'>About</h1>
-      </header>
-      <div class="about-container">
-        <p class='about-text'> <span class='emoji'>🙋</span> I'm <span class='name'>nele</span>, a student devine, currently in my last year. Throughout the years in college, I've learned a lot! <br/>I had no knowledge about digital design or development when I started Devine but that changed quickly. <br/>Learning many different things from motion graphics to UI/UX till programming games, gave me a very open mind. <br/>I like to get a little taste of everything! In my spare time, I will probably going for a swim (I love to be the first one in the water and brake the flat water surface).<br/><br/>
-        If you have a question or want to collab, just <a class="mail-link" href="mailto:debruycker.nele@gmail.com">send me an email!</a> <span class='emoji'>🖌</span> </p>
-        <ul class="flex-next about-links">
-          <li>
-            <h2 class="links-title">Name</h2>
-            <p>Nele De Bruycker</p>
-          </li>
-          <li>
-            <h2 class="links-title">Contact</h2>
-            <p>
-              <a class="links-url" href="tel:0032470635219">+32 470 64 52 19</a><br/>
-              <a class="links-url" href="mailto:debruycker.nele@gmail.com">debruycker.nele@gmail.com</a>
-            </p>
-          </li>
-          <li>
-            <h2 class="links-title">Links</h2>
-            <ul>
-              <li><a class="links-url" href="https://www.behance.net/neledebruyb3d8" target="blank">Behance</a></li>
-              <li><a class="links-url" href="https://vimeo.com/neledebruycker" target="blank">Vimeo</a><li/>
-              <li><a class="links-url" href="https://www.pinterest.com/nele_debruycker/" target="blank">Pinterest</a></li>
-              <li><a class="links-url" href="https://github.com/NeleDB" target="blank">Github</a></li>
-            </p>
-          </li>
-        </ul>
-      </div>
+      </article>
 
+      <article class="work__item">
+        <a href="pages/stranger.html"></a>
+        <div class="work__item__image work__item__image--stranger">
+          <img src="/assets/img/02_stranger-overview.png" alt="Stranger Spaces">
+        </div>
+        <div>
+          <h2 class="work__item__title">Stranger Spaces</h2>
+          <p class="work__item__text">My three months of internship in 40”.</p>
+        </div>
+      </article>
+
+      <article class="work__item">
+        <a href="pages/meditea.html"></a>
+        <div class="work__item__image work__item__image--meditea">
+          <img src="/assets/img/03_meditea-overview.png" alt="Meditea">
+        </div>
+        <div>
+          <h2 class="work__item__title">Stranger Spaces</h2>
+          <p class="work__item__text">My three months of internship in 40”.</p>
+        </div>
+      </article>
+
+      <article class="work__item">
+        <a href="pages/fjallraven.html"></a>
+        <div class="work__item__image work__item__image--fjallraven">
+          <img src="/assets/img/04_fjallraven-overview.png" alt="Fjallraven">
+        </div>
+        <div>
+          <h2 class="work__item__title">Stranger Spaces</h2>
+          <p class="work__item__text">My three months of internship in 40”.</p>
+        </div>
+      </article>
     </section>
+
   </main>
-
+  <footer>
+    &copy; Nele De Bruycker
+  </footer>
 
 </body>
 
